--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,11 @@
     "titleBar.activeBackground": "#5c56ab",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#5c56ab99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#7d78bc",
+    "statusBarItem.remoteBackground": "#5c56ab",
+    "statusBarItem.remoteForeground": "#e7e7e7"
   },
   "peacock.color": "#5c56ab"
 }
